[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addressiq"
version = "0.1.0"
description = "addressiq is an open‑source Python toolkit for fast, accurate address intelligence. Whether you need geocoding, reverse geocoding, Placekey lookups, or synthetic address generation from Overture Maps data, AddressIQ makes it easy to prototype, test, and scale."
readme = "README.rst"
authors = [
  {name = "Dennis Irorere", email = "denironyx@gmail.com"}
]
maintainers = [
  {name = "Dennis Irorere", email = "denironyx@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/unpatterned-labs/addressiq/issues"
changelog = "https://github.com/unpatterned-labs/addressiq/blob/master/changelog.md"
homepage = "https://github.com/unpatterned-labs/addressiq"

[tool.setuptools]
package-dir = {"addressiq" = "addressiq"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

